# DeepLearningDemos

./: README.md
ANN/: Assignment_Data.csv  pyproject.toml  requirements.txt
ANN/src/: client_prediction.py  main.py
Autoencoder/: pyproject.toml  requirements.txt  toml_dependencies.txt
Autoencoder/src/: model.py
BM/: pyproject.toml
BM/src/: BMmodel.py
CNN/: pyproject.toml
CNN/src/: predict_single_image.py  train_model.py
DataPreprocessing/: pyproject.toml  requirements.txt
DataPreprocessing/src/: data_preprocessing_tools.py
LogisticRegression/: pyproject.toml
LogisticRegression/src/: logistic_regression.py
RNN/: POSSIBLE_IMPROVEMENTS.md  README.md  pyproject.toml  scaler.save  stock_trend_trained_model.h5
RNN/src/: prediction.py  train_model.py
SOM/: pyproject.toml
SOM/src/: hybrid_model.py  som.py
