[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BM"
version = "0.1.0"
description = "Boltzmann machine implementation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Mehis Kasonen", email="mehis.kasonen@gmail.com" },
]

dependencies = [
    "numpy==2.1.3",
    "pandas==2.2.3",
    "torch==2.5.1"
]
