[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CNN"
version = "0.1.0"
description = "COnvolutional Neural Network implementation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
  { name="Mehis Kasonen", email="mehis.kasonen@gmail.com" },
]

dependencies = [
    "numpy==2.1.3",
    "tensorflow==2.16.1"
]